# esp32_sddc

./: .gitignore  README.md
sddc_camera/: CMakeLists.txt  Makefile  README.md  sdkconfig
sddc_camera/main/: CMakeLists.txt  Kconfig.projbuild  sddc_esp32_camera_example.c
sddc_smart_lock/: CMakeLists.txt  Makefile  README.md  sdkconfig
sddc_smart_lock/main/: CMakeLists.txt  Kconfig.projbuild  esp32_connect.c  esp32_connect.h  sddc_esp32_smart_lock.c
sddc_smart_lock/main/camera/: camera.c
sddc_template/: CMakeLists.txt  Makefile  README.md  sdkconfig  sdkconfig.old
sddc_template/main/: CMakeLists.txt  sddc_esp32_example.c
